--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,11 @@
 body {
   margin: 0;
 }
-
 .splash {
   text-align: center;
   margin: 10% 0 0 0;
   box-sizing: border-box;
 }
-
 .splash .message {
   font-size: 72px;
   line-height: 72px;
@@ -15,14 +13,12 @@ body {
   text-transform: uppercase;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
 .splash .fa-spinner {
   text-align: center;
   display: inline-block;
   font-size: 72px;
   margin-top: 50px;
 }
-
 .page-host {
   position: absolute;
   left: 0;
@@ -32,7 +28,6 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 }
-
 @media print {
   .page-host {
     position: absolute;
@@ -44,90 +39,70 @@ body {
     overflow-x: inherit;
   }
 }
-
-section {
-  margin: 0 20px;
-}
-
-.navbar-nav li.loader {
-  margin: 12px 24px 0 6px;
-}
-
-.pictureDetail {
-  max-width: 425px;
-}
+section {}
 
 /* animate page transitions */
+
 section.au-enter-active {
   -webkit-animation: fadeInRight 1s;
   animation: fadeInRight 1s;
 }
-
 div.au-stagger {
   /* 50ms will be applied between each successive enter operation */
   -webkit-animation-delay: 50ms;
   animation-delay: 50ms;
 }
-
-.card-container.au-enter {
-  opacity: 0;
+.navbar-nav li.loader {
+  margin: 12px 24px 0 6px;
 }
-
-.card-container.au-enter-active {
-  -webkit-animation: fadeIn 2s;
-  animation: fadeIn 2s;
+@media max-width: 640px {
+  /*.hero-container {
+    height: 200px;
+  }*/
 }
-
-.card {
-  overflow: hidden;
+.hero-container {
+  height: 600px;
+  background-color: white;
+  background-image: url("../img/london.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
   position: relative;
-  border: 1px solid #CCC;
-  border-radius: 8px;
-  text-align: center;
-  padding: 0;
-  background-color: #337ab7;
-  color: rgb(136, 172, 217);
-  margin-bottom: 32px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .5);
 }
-
-.card .content {
-  margin-top: 10px;
+.hero-content {
+  padding-top: 1px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-
-.card .content .name {
+.hero-content h1, .hero-content h4 {
   color: white;
-  text-shadow: 0 0 6px rgba(0, 0, 0, .5);
-  font-size: 18px;
+  text-align: center;
+  margin-bottom: 15px;
 }
-
-.card .header-bg {
-  /* This stretches the canvas across the entire hero unit */
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 70px;
-  border-bottom: 1px #FFF solid;
-  border-radius: 6px 6px 0 0;
+.search-container {
+  max-width: 500px;
+  background: red;
+  margin: auto;
 }
-
-.card .avatar {
-  position: relative;
-  margin-top: 15px;
-  z-index: 100;
+.search-item {
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 0px !important;
 }
-
-.card .avatar img {
-  width: 100px;
-  height: 100px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  border: 2px #FFF solid;
+.search-submit {
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 /* animation definitions */
+
 @-webkit-keyframes fadeInRight {
   0% {
     opacity: 0;
@@ -140,7 +115,6 @@ div.au-stagger {
     transform: none
   }
 }
-
 @keyframes fadeInRight {
   0% {
     opacity: 0;
@@ -155,7 +129,6 @@ div.au-stagger {
     transform: none
   }
 }
-
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
@@ -164,7 +137,6 @@ div.au-stagger {
     opacity: 1;
   }
 }
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
