Removed child router as not needed for suggestions menu.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,24 +90,16 @@ div.au-stagger {
 .search-submit {
   width: 100%;
 }
-
 .suggestions-menu {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-
 .suggestions-menu .item {
   background-color: blue;
   width: 80px;
+  text-align: center;
   height: 80px;
-}
-
-.suggestions-menu .item a {
   color: white;
-}
-
-.suggestions-menu .item .image {
-
 }
 
 /* animation definitions */
